--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^5.8.4",
+    "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading-skeleton": "^3.3.1",
+    "react-player": "^2.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
