--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-loading-skeleton": "^3.3.1",
     "react-player": "^2.13.0"
   },
