--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
     "react-player": "^2.13.0"
   },
