--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-player": "^2.13.0"
+    "react-player": "^2.13.0",
+    "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
